<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context="com.fixtconsumer.activities.InviteFriendActivity">
    <RelativeLayout
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/cancel"
            android:padding="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white_cross_toolbar"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/referafriend"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgGift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_top"
                android:src="@drawable/gift"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsizelarge"
                android:gravity="center"
                android:text="@string/getdiscount"/>
            <TextView
                android:layout_marginTop="@dimen/line_topmargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsizemedium"
                android:gravity="center"
                android:text="@string/referafriendto_fixd"/>
            <TextView
                android:id="@+id/details"
                android:padding="@dimen/all_padding_in_widgets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/theme_orange"
                android:textSize="@dimen/textsizemedium"
                android:gravity="center"
                android:text="@string/details"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/line_topmargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/paddingbottom"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtEmailInvite"
                android:padding="@dimen/all_padding_in_widgets"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/email_invite"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsizemedium"
                android:gravity="center"
                android:text="@string/emailinvite"/>
            <TextView
                android:id="@+id/txtTextInvite"
                android:layout_marginTop="@dimen/margin_top"
                android:padding="@dimen/all_padding_in_widgets"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_invite"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsizemedium"
                android:gravity="center"
                android:text="@string/textinvite"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>
