<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_orange"
    tools:context="com.fixtconsumer.fragments.InviteMobileFragment">

    <RelativeLayout
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:id="@+id/tootlbar"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:id="@+id/txtCancel"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/cancel"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/referafriend"/>
        <TextView
            android:padding="10dp"
            android:id="@+id/txtInvite"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/referinvite"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/tootlbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_topmargin"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/tabs_margin"
            android:src="@drawable/big_chat"/>
        <EditText
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tabs_margin"
            android:layout_marginRight="@dimen/tabs_margin"
            android:layout_marginTop="@dimen/tableftrightmargin"
            android:background="@drawable/full_white_rectangle"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/invitemobile"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorinvite"
            android:textColorHint="@color/colorinvite"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textSize="@dimen/textsizelarge" />

    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout4"

        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/done"
            android:background="@drawable/delete_box"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsizelarge" />
    </LinearLayout>
</RelativeLayout>
